--- a/QuanLyHocSinh/QuanLyHocSinh/QuanLyHocSinh.csproj
+++ b/QuanLyHocSinh/QuanLyHocSinh/QuanLyHocSinh.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +47,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,11 +65,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\BLL_CTDSLop.cs" />
+    <Compile Include="BLL\BLL_HocKi.cs" />
+    <Compile Include="BLL\BLL_KhoiLop.cs" />
+    <Compile Include="BLL\BLL_Lop.cs" />
+    <Compile Include="BLL\BLL_MonHoc.cs" />
+    <Compile Include="BLL\BLL_NamHoc.cs" />
+    <Compile Include="DAL\DAL_CTDSLop.cs" />
+    <Compile Include="DAL\DAL_HocKi.cs" />
+    <Compile Include="DAL\DAL_KhoiLop.cs" />
+    <Compile Include="DAL\DAL_Lop.cs" />
+    <Compile Include="DAL\DAL_MonHoc.cs" />
+    <Compile Include="DAL\DAL_NamHoc.cs" />
+    <Compile Include="GUI\fBANGDIEM.cs" />
+    <Compile Include="GUI\fBANGDIEM.Designer.cs">
+      <DependentUpon>fBANGDIEM.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\fDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\fDangNhap.Designer.cs">
       <DependentUpon>fDangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fDoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fDoiMatKhau.Designer.cs">
+      <DependentUpon>fDoiMatKhau.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\fHocSinh.cs">
       <SubType>Form</SubType>
@@ -58,19 +99,91 @@
     <Compile Include="GUI\fHocSinh.Designer.cs">
       <DependentUpon>fHocSinh.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\fQLCTDSLop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLCTDSLop.Designer.cs">
+      <DependentUpon>fQLCTDSLop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fQLHocKi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLHocKi.Designer.cs">
+      <DependentUpon>fQLHocKi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fQLKhoiLop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLKhoiLop.Designer.cs">
+      <DependentUpon>fQLKhoiLop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fQLLop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLLop.Designer.cs">
+      <DependentUpon>fQLLop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fQLMonHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLMonHoc.Designer.cs">
+      <DependentUpon>fQLMonHoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fQLNamHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fQLNamHoc.Designer.cs">
+      <DependentUpon>fQLNamHoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\fQuanLyTaiKhoan.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\fQuanLyTaiKhoan.Designer.cs">
       <DependentUpon>fQuanLyTaiKhoan.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\fThongTinChiTiet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fThongTinChiTiet.Designer.cs">
+      <DependentUpon>fThongTinChiTiet.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\fBANGDIEM.resx">
+      <DependentUpon>fBANGDIEM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\fDangNhap.resx">
       <DependentUpon>fDangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fDoiMatKhau.resx">
+      <DependentUpon>fDoiMatKhau.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\fHocSinh.resx">
       <DependentUpon>fHocSinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLCTDSLop.resx">
+      <DependentUpon>fQLCTDSLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLHocKi.resx">
+      <DependentUpon>fQLHocKi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLKhoiLop.resx">
+      <DependentUpon>fQLKhoiLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLLop.resx">
+      <DependentUpon>fQLLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLMonHoc.resx">
+      <DependentUpon>fQLMonHoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQLNamHoc.resx">
+      <DependentUpon>fQLNamHoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fQuanLyTaiKhoan.resx">
+      <DependentUpon>fQuanLyTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fThongTinChiTiet.resx">
+      <DependentUpon>fThongTinChiTiet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -95,8 +208,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BLL\" />
-    <Folder Include="DAL\" />
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
